using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTags {


        public const string MOVEMENT = "Movement";

        public const string PUNCH1_TRIGGER = "Punch 1";
        public const string PUNCH2_TRIGGER = "Punch 2";
        public const string PUNCH3_TRIGGER = "Punch 3";

        public const string KICK1_TRIGGER = "Kick 1";
        public const string KICK2_TRIGGER = "Kick 2";
        public const string ATTACK1_TRIGGER = "Attack 1";
        public const string ATTACK2_TRIGGER = "Attack 2";
        public const string ATTACK3_TRIGGER = "Attack 3";
        public const string IDLE_ANIMATION = "Idle";
        public const string KNOCKDOWN_TRIGGER = "Knockdown";
        public const string STANDUP_TRIGGER = "Standup";
        public const string HIT_TRIGGER = "Hit";
        public const string DEATH_TRIGGER = "Death";

}

public class Axis{
    public const string HORIZONTAL_AXIS = "Horizontal";
    public const string VERTICAL_AXIS = "Vertical";
}

public class Tags{
    public const string GROUND_TAG = "Ground";
    public const string PLAYER_TAG = "Player";
    public const string ENEMY_TAG = "Enemy";
    public const string LEFT_ARM_TAG = "LeftArm";
    public const string LEFT_LEG_TAG = "LeftLeg";
    public const string UNTAGGED_TAG = "Untagged";
    public const string MAIN_CAMERA_TAG = "MainCamera";
    public const string HEALTH_UI = "HealthUI";

}
